--- a/vue/package.json
+++ b/vue/package.json
@@ -3,8 +3,8 @@
   "version": "4.7.1",
   "private": true,
   "scripts": {
-    "serve": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
-   "build": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build"
+    "serve": "vue-cli-service serve",
+   "build": "vue-cli-service build"
 },
   "dependencies": {
     "@aspnet/signalr": "^1.0.0",
