--- a/vue-nuxt/package.json
+++ b/vue-nuxt/package.json
@@ -8,18 +8,21 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
-  "dependencies":{
+  "dependencies": {
     "@left4code/tw-starter": "^3.1.35"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@types/node": "^18",
     "@tailwindcss/forms": "^0.5.1",
+    "@types/node": "^18",
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.6.2",
+    "nuxt-vite": "^0.3.5",
     "postcss": "^8.4.25",
     "postcss-advanced-variables": "^3.0.1",
     "sass": "^1.63.6",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "vue-property-decorator": "^9.1.2"
+
   }
 }
