--- a/aspnet-core/src/LH.Web.Host/appsettings.json
+++ b/aspnet-core/src/LH.Web.Host/appsettings.json
@@ -1,12 +1,12 @@
 ﻿{
   "ConnectionStrings": {
-    //"Default": "Server=DESKTOP-BPR6SJI; Database=LHDb; Trusted_Connection=True; TrustServerCertificate=True;"
-    "Default": "Server=DESKTOP_LAM\\SQLEXPRESS; Database=LHDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    "Default": "Server=DESKTOP-BPR6SJI; Database=LHDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    //"Default": "Server=DESKTOP_LAM\\SQLEXPRESS; Database=LHDb; Trusted_Connection=True; TrustServerCertificate=True;"
   },
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
     "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
+    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:8000"
   },
   "Authentication": {
     "JwtBearer": {
