--- a/vue-nuxt/package.json
+++ b/vue-nuxt/package.json
@@ -9,20 +9,34 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@left4code/tw-starter": "^3.1.35"
+    "@left4code/tw-starter": "^3.1.35",
+    "@nuxtjs/moment": "^1.6.1",
+    "@pinia/nuxt": "^0.4.11",
+    "abp-web-resources": "^5.1.1",
+    "axios": "^0.18.1",
+    "lucide": "^0.17.2",
+    "lucide-vue-next": "^0.104.0",
+    "luxon": "^3.3.0",
+    "moment": "^2.29.4",
+    "nuxt-moment": "^1.0.5",
+    "pinia": "^2.1.4",
+    "vue3-tailwind": "^0.3.4"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/types": "^2.17.1",
+    "@nuxtjs/composition-api": "^1.7.1",
     "@tailwindcss/forms": "^0.5.1",
+    "@types/luxon": "^3.3.1",
     "@types/node": "^18",
+    "@types/tabulator-tables": "^5.4.8",
     "autoprefixer": "^10.4.14",
     "nuxt": "^3.6.2",
     "nuxt-vite": "^0.3.5",
     "postcss": "^8.4.25",
     "postcss-advanced-variables": "^3.0.1",
     "sass": "^1.63.6",
-    "tailwindcss": "^3.3.2",
-    "vue-property-decorator": "^9.1.2"
-
+    "tabulator-tables": "^5.5.1",
+    "tailwindcss": "^3.3.2"
   }
 }
