--- a/aspnet-core/src/LH.Web.Host/appsettings.json
+++ b/aspnet-core/src/LH.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-BPR6SJI; Database=LHDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    "Default": "Server=DESKTOP-FC6R5O6; Database=LHDb; Trusted_Connection=True; TrustServerCertificate=True;"
     //"Default": "Server=DESKTOP_LAM\\SQLEXPRESS; Database=LHDb; Trusted_Connection=True; TrustServerCertificate=True;"
   },
   "App": {
