--- a/vue-nuxt/package.json
+++ b/vue-nuxt/package.json
@@ -12,20 +12,21 @@
     "@left4code/tw-starter": "^3.1.35",
     "@nuxtjs/moment": "^1.6.1",
     "@pinia/nuxt": "^0.4.11",
-    "vee-validate": "^4.12.5",
+    "@vee-validate/nuxt": "^4.12.5",
+    "@vee-validate/yup": "^4.12.5",
     "abp-web-resources": "^5.1.1",
     "axios": "^0.18.1",
     "lucide": "^0.17.2",
     "lucide-vue-next": "^0.104.0",
     "luxon": "^3.3.0",
+    "mitt": "^3.0.1",
     "moment": "^2.29.4",
     "nuxt-moment": "^1.0.5",
     "pinia": "^2.1.4",
-    "vue3-tailwind": "^0.3.4",
     "tabulator-tables": "^5.5.1",
     "tailwindcss": "^3.3.2",
-    "@vee-validate/nuxt": "^4.12.5",
-    "@vee-validate/yup": "^4.12.5"
+    "vee-validate": "^4.12.5",
+    "vue3-tailwind": "^0.3.4"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
