--- a/vue-nuxt/package.json
+++ b/vue-nuxt/package.json
@@ -22,16 +22,17 @@
     "mitt": "^3.0.1",
     "moment": "^2.29.4",
     "nuxt-moment": "^1.0.5",
+    "nuxt-tailvue": "^1.0.95",
     "pinia": "^2.1.4",
     "tabulator-tables": "^5.5.1",
     "tailwindcss": "^3.3.2",
-    "vee-validate": "^4.12.5",
-    "vue3-tailwind": "^0.3.4"
+    "vee-validate": "^4.12.5"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/types": "^2.17.1",
     "@nuxtjs/composition-api": "^1.7.1",
+    "@tailvue/nuxt": "^1.0.0",
     "@tailwindcss/forms": "^0.5.1",
     "@types/luxon": "^3.3.1",
     "@types/node": "^18",
