--- a/vue-nuxt/package.json
+++ b/vue-nuxt/package.json
@@ -24,6 +24,7 @@
     "nuxt-moment": "^1.0.5",
     "nuxt-tailvue": "^1.0.95",
     "pinia": "^2.1.4",
+    "sweetalert2": "^11.11.0",
     "tabulator-tables": "^5.5.1",
     "tailwindcss": "^3.3.2",
     "vee-validate": "^4.12.5"
@@ -34,17 +35,16 @@
     "@nuxtjs/composition-api": "^1.7.1",
     "@tailvue/nuxt": "^1.0.0",
     "@tailwindcss/forms": "^0.5.1",
+    "@types/lodash": "^4.17.1",
     "@types/luxon": "^3.3.1",
     "@types/node": "^18",
     "@types/tabulator-tables": "^5.4.8",
-    "@types/lodash": "^4.17.1",
     "autoprefixer": "^10.4.14",
+    "lodash": "^4.17.21",
     "nuxt": "^3.6.2",
     "nuxt-vite": "^0.3.5",
     "postcss": "^8.4.25",
     "postcss-advanced-variables": "^3.0.1",
-    "sass": "^1.63.6",
-    "lodash": "^4.17.21"
-
+    "sass": "^1.63.6"
   }
 }
